AX: Fix for crash in AXIsolatedObject::textMarkerRange() https://bugs.webkit.org/show_bug.cgi?id=255051 <rdar://problem/107677029>

Reviewed by Tyler Wilcock.

Modified the AXIsolatedObject::propertyValue to return the null value if the property is not in the properties map. This avoids the assert crash in the switchOn for some types when the property is not present in the map.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
(WebCore::AXIsolatedObject::propertyValue const):
* Source/WebCore/accessibility/isolatedtree/mac/AXIsolatedObjectMac.mm:
(WebCore::AXIsolatedObject::textMarkerRange const):

Canonical link: https://commits.webkit.org/262662@main