Source/WebCore/accessibility/isolatedtree/mac/AXIsolatedObjectMac.mm
@@ -105,11 +105,12 @@ void AXIsolatedObject::detachPlatformWrapper(AccessibilityDetachmentType detachm
 
 AXTextMarkerRange AXIsolatedObject::textMarkerRange() const
 {
-    if (auto attributedText = propertyValue<RetainPtr<NSAttributedString>>(AXPropertyName::AttributedText)) {
+    if (isSecureField()) {
         // FIXME: return a null range to match non ITM behavior, but this should be revisited since we should return ranges for secure fields.
-        if (isSecureField())
-            return { };
+        return { };
+    }
 
+    if (auto attributedText = propertyValue<RetainPtr<NSAttributedString>>(AXPropertyName::AttributedText)) {
         String text { [attributedText string] };
         if (text.length()) {
             TextMarkerData start(tree()->treeID(), objectID(),
